# Laba_4

./: CMakeLists.txt  bfs.cpp  bfs.h  dfs.cpp  dfs.h  dijkstra.cpp  dijkstra.h  fordfulkerson.cpp  fordfulkerson.h  graph.cpp  graph.h  kruskal_algorithm.cpp  kruskal_algorithm.h  main.cpp  prima_algorithm.cpp  prima_algorithm.h
